--- a/index.html
+++ b/index.html
@@ -1,2 +1,39 @@
-This is not yet a great website. It is not even in HTML.
-Please make it great and also in HTML.
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="index.css" />
+        <title>The Art of Movement</title>
+    </head>
+
+    <body>
+        <h1>What is Parkour?</h1>
+
+        <div class="parkour_intro_img">
+            <img src="parkour_intro.jpg"
+                    width= 100%
+                    height=100%
+                    />
+        </div>
+
+        <p>From its <a href="https://en.wikipedia.org/wiki/Parkour">wikipedia page</a>: 
+        <blockquote>
+            <b>Parkour</b> (French: [paʁkuʁ]) is a training discipline using movement that developed from military obstacle course training.</p>
+        </blockquote>
+
+        <p>The aim is to get from one point to another in an environment in <i>the fastest</i> and <i>most efficient</i> way possible. Parkour includes following types of movement:
+            <ul>
+                <li>running</li>
+                <li>climbing</li>
+                <li>swinging</li>
+                <li>vaulting</li>
+                <li>jumping</li>
+                <li>rolling</li>
+                <li>crawling</li>
+            </ul>
+        and other movements as deemed most suitable for the situation.
+        </p>
+
+        <p>Parkour is an activity that can be practiced alone or with others and is usually carried out in urban spaces. It involves seeing the environment in a new way and imagining the potential for navigating it by movement around, across, through, over and under its features.</p>
+    </body>
+</html>
