Tweaked colors, fonts and paddings

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
         <h1>What is Parkour?</h1>
 
         <div class="parkour_intro_img">
-            <img src="parkour_intro.jpg"
-                    width= 100%
-                    height=100%
-                    />
+            <img src="parkour_intro.jpg" 
+                alt="No momentum lost!"
+                title="Vaulting Parkour Practitioner"
+                width= 400
+                height= 265 />
+            <p>Figure: A parkour practitioner vaulting over an obstacle.</p>
         </div>
 
         <p>From its <a href="https://en.wikipedia.org/wiki/Parkour">wikipedia page</a>: 
@@ -31,8 +33,7 @@
                 <li>rolling</li>
                 <li>crawling</li>
             </ul>
-        and other movements as deemed most suitable for the situation.
-        </p>
+        and other movements as deemed most suitable for the situation.</p>
 
         <p>Parkour is an activity that can be practiced alone or with others and is usually carried out in urban spaces. It involves seeing the environment in a new way and imagining the potential for navigating it by movement around, across, through, over and under its features.</p>
     </body>
