--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <p>Figure: A parkour practitioner vaulting over an obstacle.</p>
         </div>
 
-        <p>From its <a href="https://en.wikipedia.org/wiki/Parkour">wikipedia page</a>: 
+        <p>From its <a href="https://en.wikipedia.org/wiki/Parkour">wikipedia page</a>:</p> 
         <blockquote>
-            <b>Parkour</b> (French: [paʁkuʁ]) is a training discipline using movement that developed from military obstacle course training.</p>
+            <b>Parkour</b> (French: [paʁkuʁ]) is a training discipline using movement that developed from military obstacle course training.
         </blockquote>
 
-        <p>The aim is to get from one point to another in an environment in <i>the fastest</i> and <i>most efficient</i> way possible. Parkour includes following types of movement:
+        <p>The aim is to get from one point to another in an environment in <i>the fastest</i> and <i>most efficient</i> way possible. Parkour includes following types of movement:</p>
             <ul>
                 <li>running</li>
                 <li>climbing</li>
@@ -33,7 +33,7 @@
                 <li>rolling</li>
                 <li>crawling</li>
             </ul>
-        and other movements as deemed most suitable for the situation.</p>
+        <p>and other movements as deemed most suitable for the situation.</p>
 
         <p>Parkour is an activity that can be practiced alone or with others and is usually carried out in urban spaces. It involves seeing the environment in a new way and imagining the potential for navigating it by movement around, across, through, over and under its features.</p>
     </body>
