Inline css and little tweaks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 title="Vaulting Parkour Practitioner"
                 width= 400
                 height= 265 />
-            <p>Figure: A parkour practitioner vaulting over an obstacle.</p>
+            <p style="font-size: 14px; font-style: italic; text-align: center;">Figure: A parkour practitioner vaulting over an obstacle.</p>
         </div>
 
         <p>From its <a href="https://en.wikipedia.org/wiki/Parkour">wikipedia page</a>:</p> 
@@ -36,5 +36,7 @@
         <p>and other movements as deemed most suitable for the situation.</p>
 
         <p>Parkour is an activity that can be practiced alone or with others and is usually carried out in urban spaces. It involves seeing the environment in a new way and imagining the potential for navigating it by movement around, across, through, over and under its features.</p>
+
+        <p>Parkour was developed in France, primarily by Raymond Belle, and further by his son David Belle and his group of friends, a team called Yamakasi, during the late 1980s. The discipline was popularised in the late 1990s and 2000s through films, documentaries and advertisements featuring Yamakasi.</p>
     </body>
 </html>
