--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+    <div class="menu">
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="techniques.html">Techniques</a></li>
+            <li><a href="movies.html">Movies</a></li>
+        </ul> 
+    </div>
+
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css" />
@@ -37,6 +45,6 @@
 
         <p>Parkour is an activity that can be practiced alone or with others and is usually carried out in urban spaces. It involves seeing the environment in a new way and imagining the potential for navigating it by movement around, across, through, over and under its features.</p>
 
-        <p>Parkour was developed in France, primarily by Raymond Belle, and further by his son David Belle and his group of friends, a team called Yamakasi, during the late 1980s. The discipline was popularised in the late 1990s and 2000s through films, documentaries and advertisements featuring Yamakasi.</p>
+        <p>Parkour was developed in France, primarily by Raymond Belle, and further by his son David Belle and his group of friends, a team called <a href="https://en.wikipedia.org/wiki/Yamakasi">Yamakasi</a>, during the late 1980s. The discipline was popularised in the late 1990s and 2000s through films, documentaries and advertisements featuring Yamakasi.</p>
     </body>
 </html>
