--- a/movies.html
+++ b/movies.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <div class="menu">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="techniques.html">Techniques</a></li>
-            <li><a class="active" href="movies.html">Movies</a></li>
-        </ul> 
-    </div>
     <head>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="index.css" />
             <title>The Art of Movement</title>
     </head>
+    <body>
+        <div class="menu">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="techniques.html">Techniques</a></li>
+                <li><a class="active" href="movies.html">Movies</a></li>
+            </ul> 
+        </div>
+    </body>
+
 </html>
