--- a/movies.html
+++ b/movies.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="index.css" />
+            <link rel="stylesheet" href="movies.css" />
+            <link rel="stylesheet" href="common.css" />
+            <link rel="stylesheet" href="menu.css" />
             <title>The Art of Movement</title>
     </head>
     <body>
@@ -13,6 +15,49 @@
                 <li><a class="active" href="movies.html">Movies</a></li>
             </ul> 
         </div>
+
+        <h1>Movies Featuring Parkour</h1>
+
+        <p>Here are some of the movies Featuring parkour:</p>
+        <table style="width:100%">
+            <tr>
+                <th>Movie</th>
+                <th>Year</th>
+                <th>Actors</th>
+                <th>Poster</th>
+            </tr>
+            <tr>
+                <td>Yamakasi</td>
+                <td>2001</td>
+                <td>
+                    <p>Châu Belle Dinh</p>
+                    <p>Williams Belle</p>
+                    <p>Malik Diouf</p>
+                    <p>Yann Hnautra</p>
+                    <p>Guylain N'Guba-Boyeke</p>
+                    <p>Charles Perrière</p>
+                    <p>Laurent Piemontesi</p>
+                </td>
+                <td><img src="img/yamakasi_orig.jpg" width=220 height=320></td>
+            </tr>
+            <tr>
+                <td>District B13</td>
+                <td>2004</td>
+                <td>
+                    <p>Cyril Raffaelli</p>
+                    <p>David Belle</p>
+                </td>
+                <td><img src="img/districtb13_orig.jpg" width=220 height=320></td>
+            </tr>
+            <tr>
+                <td>Casino Royale</td>
+                <td>2006</td>
+                <td>
+                    <p>Sébastien Foucan</p>
+                </td>
+                <td><img src="img/casinoroyale_orig.jpg" width=220 height=320></td>
+            </tr>
+              </table> 
     </body>
 
 </html>
