--- a/techniques.html
+++ b/techniques.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="index.css" />
+            <!-- <link rel="stylesheet" href="techniques.css" /> -->
+            <link rel="stylesheet" href="common.css" />
+            <link rel="stylesheet" href="menu.css" />
             <title>The Art of Movement</title>
     </head>
     <body>
