--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="common.css" />
+        <link rel="stylesheet" href="menu.css" />
         <title>The Art of Movement</title>
     </head>
 
