--- a/movies.html
+++ b/movies.html
@@ -18,7 +18,7 @@
 
         <h1>Movies Featuring Parkour</h1>
 
-        <p>Here are some of the movies Featuring parkour:</p>
+        <p>Here are some of the movies featuring parkour:</p>
         <table style="width:100%">
             <tr>
                 <th>Movie</th>
