added links and references

--- a/movies.html
+++ b/movies.html
@@ -1,63 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-            <meta charset="UTF-8">
-            <link rel="stylesheet" href="movies.css" />
-            <link rel="stylesheet" href="common.css" />
-            <link rel="stylesheet" href="menu.css" />
-            <title>The Art of Movement</title>
-    </head>
-    <body>
-        <div class="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="techniques.html">Techniques</a></li>
-                <li><a class="active" href="movies.html">Movies</a></li>
-            </ul> 
-        </div>
 
-        <h1>Movies Featuring Parkour</h1>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="movies.css" />
+    <link rel="stylesheet" href="common.css" />
+    <link rel="stylesheet" href="menu.css" />
+    <title>The Art of Movement</title>
+</head>
 
-        <p>Here are some of the movies featuring parkour:</p>
-        <table style="width:100%">
-            <tr>
-                <th>Movie</th>
-                <th>Year</th>
-                <th>Actors</th>
-                <th>Poster</th>
-            </tr>
-            <tr>
-                <td>Yamakasi</td>
-                <td>2001</td>
-                <td>
-                    <p>Châu Belle Dinh</p>
-                    <p>Williams Belle</p>
-                    <p>Malik Diouf</p>
-                    <p>Yann Hnautra</p>
-                    <p>Guylain N'Guba-Boyeke</p>
-                    <p>Charles Perrière</p>
-                    <p>Laurent Piemontesi</p>
-                </td>
-                <td><img src="img/yamakasi_orig.jpg" width=220 height=320></td>
-            </tr>
-            <tr>
-                <td>District B13</td>
-                <td>2004</td>
-                <td>
-                    <p>Cyril Raffaelli</p>
-                    <p>David Belle</p>
-                </td>
-                <td><img src="img/districtb13_orig.jpg" width=220 height=320></td>
-            </tr>
-            <tr>
-                <td>Casino Royale</td>
-                <td>2006</td>
-                <td>
-                    <p>Sébastien Foucan</p>
-                </td>
-                <td><img src="img/casinoroyale_orig.jpg" width=220 height=320></td>
-            </tr>
-              </table> 
-    </body>
+<body>
+    <div class="menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="techniques.html">Techniques</a></li>
+            <li><a class="active" href="movies.html">Movies</a></li>
+        </ul>
+    </div>
+
+    <h1>Movies Featuring Parkour</h1>
+
+    <p>Here are some of the movies featuring parkour:</p>
+    <table id="movies_table" style="width:100%">
+        <tr>
+            <th>Movie</th>
+            <th>Year</th>
+            <th>Actors</th>
+            <th>Poster</th>
+        </tr>
+        <tr>
+            <td><a href="https://www.imdb.com/title/tt0267129">Yamakasi</a></td>
+            <td>2001</td>
+            <td>
+                <p>Châu Belle Dinh</p>
+                <p>Williams Belle</p>
+                <p>Malik Diouf</p>
+                <p>Yann Hnautra</p>
+                <p>Guylain N'Guba-Boyeke</p>
+                <p>Charles Perrière</p>
+                <p>Laurent Piemontesi</p>
+            </td>
+            <td><img src="img/yamakasi_orig.jpg" width=220 height=320></td>
+        </tr>
+        <tr>
+            <td><a href="https://www.imdb.com/title/tt0414852">District B13</a></td>
+            <td>2004</td>
+            <td>
+                <p>Cyril Raffaelli</p>
+                <p>David Belle</p>
+            </td>
+            <td><img src="img/districtb13_orig.jpg" width=220 height=320></td>
+        </tr>
+        <tr>
+            <td><a href="https://www.imdb.com/title/tt0381061">Casino Royale</a></td>
+            <td>2006</td>
+            <td>
+                <p>Sébastien Foucan</p>
+            </td>
+            <td><img src="img/casinoroyale_orig.jpg" width=220 height=320></td>
+        </tr>
+    </table>
+    <p style="font-size:12px;">(taken from <a href="https://www.imdb.com">imdb.com</a>)</p>
+</body>
 
 </html>
