--- a/index.html
+++ b/index.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="index.css" />
-        <link rel="stylesheet" href="common.css" />
-        <link rel="stylesheet" href="menu.css" />
-        <title>The Art of Movement</title>
-    </head>
 
-    <body>
-        <div class="menu">
-                <ul>
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="techniques.html">Techniques</a></li>
-                    <li><a href="movies.html">Movies</a></li>
-                </ul> 
-            </div>
-        <h1>What is Parkour?</h1>
-        <div class="parkour_intro_img">
-            <img src="parkour_intro.jpg" 
-                alt="No momentum lost!"
-                title="Vaulting Parkour Practitioner"
-                width= 400
-                height= 265 />
-            <p style="font-size: 14px; font-style: italic; text-align: center;">Figure: A parkour practitioner vaulting over an obstacle.</p>
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="common.css" />
+    <link rel="stylesheet" href="menu.css" />
+    <title>The Art of Movement</title>
+</head>
 
-        <p>From its <a href="https://en.wikipedia.org/wiki/Parkour">wikipedia page</a>:</p> 
-        <blockquote>
-            <b>Parkour</b> (French: [paʁkuʁ]) is a training discipline using movement that developed from military obstacle course training.
-        </blockquote>
+<body>
+    <div class="menu">
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="techniques.html">Techniques</a></li>
+            <li><a href="movies.html">Movies</a></li>
+        </ul>
+    </div>
+    <h1>What is Parkour?</h1>
+    <div class="parkour_intro_img">
+        <img src="parkour_intro.jpg" alt="No momentum lost!" title="Vaulting Parkour Practitioner" width=400 height=265 />
+        <p style="font-size: 14px; font-style: italic; text-align: center;">Figure: A parkour practitioner vaulting
+            over an obstacle.</p>
+    </div>
 
-        <p>The aim is to get from one point to another in an environment in <i>the fastest</i> and <i>most efficient</i> way possible. Parkour includes following types of movement:</p>
-            <ul>
-                <li>running</li>
-                <li>climbing</li>
-                <li>swinging</li>
-                <li>vaulting</li>
-                <li>jumping</li>
-                <li>rolling</li>
-                <li>crawling</li>
-            </ul>
-        <p>and other movements as deemed most suitable for the situation.</p>
+    <p>From its <a href="https://en.wikipedia.org/wiki/Parkour">wikipedia page</a>:</p>
+    <blockquote>
+        <b>Parkour</b> (French: [paʁkuʁ]) is a training discipline using movement that developed from military obstacle
+        course training.
+    </blockquote>
 
-        <p>Parkour is an activity that can be practiced alone or with others and is usually carried out in urban spaces. It involves seeing the environment in a new way and imagining the potential for navigating it by movement around, across, through, over and under its features.</p>
+    <p>The aim is to get from one point to another in an environment in <i>the fastest</i> and <i>most efficient</i>
+        way possible. Parkour includes following types of movement:</p>
+    <ul>
+        <li>running</li>
+        <li>climbing</li>
+        <li>swinging</li>
+        <li>vaulting</li>
+        <li>jumping</li>
+        <li>rolling</li>
+        <li>crawling</li>
+    </ul>
+    <p>and other movements as deemed most suitable for the situation.</p>
 
-        <p>Parkour was developed in France, primarily by Raymond Belle, and further by his son David Belle and his group of friends, a team called <a href="https://en.wikipedia.org/wiki/Yamakasi">Yamakasi</a>, during the late 1980s. The discipline was popularised in the late 1990s and 2000s through films, documentaries and advertisements featuring Yamakasi.</p>
-    </body>
+    <p>Parkour is an activity that can be practiced alone or with others and is usually carried out in urban spaces. It
+        involves seeing the environment in a new way and imagining the potential for navigating it by movement around,
+        across, through, over and under its features.</p>
+
+    <p>Parkour was developed in France, primarily by Raymond Belle, and further by his son David Belle and his group of
+        friends, a team called <a href="https://en.wikipedia.org/wiki/Yamakasi">Yamakasi</a>, during the late 1980s.
+        The discipline was popularised in the late 1990s and 2000s through films, documentaries and advertisements
+        featuring Yamakasi.</p>
+</body>
+
 </html>
