--- a/techniques.html
+++ b/techniques.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-            <meta charset="UTF-8">
-            <!-- <link rel="stylesheet" href="techniques.css" /> -->
-            <link rel="stylesheet" href="common.css" />
-            <link rel="stylesheet" href="menu.css" />
-            <title>The Art of Movement</title>
-    </head>
-    <body>
-        <div class="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="techniques.html">Techniques</a></li>
-                <li><a href="movies.html">Movies</a></li>
-            </ul> 
-        </div>
-        <h1>List of Techniques</h1>
-        <p>The techniques used in parkour are listed as follows:</p>
+
+<head>
+    <meta charset="UTF-8">
+    <!-- <link rel="stylesheet" href="techniques.css" /> -->
+    <link rel="stylesheet" href="common.css" />
+    <link rel="stylesheet" href="menu.css" />
+    <title>The Art of Movement</title>
+</head>
+
+<body>
+    <div class="menu">
         <ul>
-            <li>Basic Balance</li>
-            <li>Quadrupedal movement</li>
-            <li>Running</li>
-            <li>General Landing Technique</li>
-            <li>Rolling</li>
-            <li>Climbing</li>
-            <ul>
-                <li>Basic</li>
-                <li>Advanced</li>
-            </ul>
-            <li>Passement</li>
-            <ul>
-                <li>Speed Vault</li>
-                <li>Dash Vault</li>
-                <li>Lazy Vault</li>
-            </ul>
-            <li>Precision</li>
-            <li>Saut de Brass (Arm Jump)</li>
-            <li>Passe Muraille</li>
-            <ul>
-                <li>Wall Run</li>
-                <li>Pop Vault</li>
-            </ul>
-            <li>Saut de Chat</li>
-            <ul>
-                <li>Cat Pass</li>
-                <li>Kong</li>
-                <li>Monkey</li>
-                <li>Panther</li>
-                <li>Gorilla</li>
-            </ul>
-            <li>Demi Tour (Turn Vault)</li>
-            <li>Franchissement (Underbar)</li>
-            <li>Tic Tac</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="techniques.html">Techniques</a></li>
+            <li><a href="movies.html">Movies</a></li>
         </ul>
-    </body>
+    </div>
+    <h1>List of Techniques</h1>
+    <p>The techniques used in parkour are listed as follows :</p>
+    <ul id="techniques_list">
+        <li>Basic Balance</li>
+        <li>Quadrupedal movement</li>
+        <li>Running</li>
+        <li>General Landing Technique</li>
+        <li>Rolling</li>
+        <li>Climbing</li>
+        <ul>
+            <li>Basic</li>
+            <li>Advanced</li>
+        </ul>
+        <li>Passement</li>
+        <ul>
+            <li>Speed Vault</li>
+            <li>Dash Vault</li>
+            <li>Lazy Vault</li>
+        </ul>
+        <li>Precision</li>
+        <li>Saut de Brass (Arm Jump)</li>
+        <li>Passe Muraille</li>
+        <ul>
+            <li>Wall Run</li>
+            <li>Pop Vault</li>
+        </ul>
+        <li>Saut de Chat</li>
+        <ul>
+            <li>Cat Pass</li>
+            <li>Kong</li>
+            <li>Monkey</li>
+            <li>Panther</li>
+            <li>Gorilla</li>
+        </ul>
+        <li>Demi Tour (Turn Vault)</li>
+        <li>Franchissement (Underbar)</li>
+        <li>Tic Tac</li>
+    </ul>
+    <p style="font-size:12px;">(taken from <a href="http://parkourpedia.com/technique/">parkourpedia.com</a>)</p>
+</body>
+
 </html>
