--- a/movies.html
+++ b/movies.html
@@ -40,7 +40,7 @@
                 <p>Charles Perrière</p>
                 <p>Laurent Piemontesi</p>
             </td>
-            <td><img src="img/yamakasi_orig.jpg" width=220 height=320></td>
+            <td><img src="img/yamakasi_moon.jpg" width=220 height=320></td>
         </tr>
         <tr>
             <td><a href="https://www.imdb.com/title/tt0414852">District B13</a></td>
@@ -49,7 +49,7 @@
                 <p>Cyril Raffaelli</p>
                 <p>David Belle</p>
             </td>
-            <td><img src="img/districtb13_orig.jpg" width=220 height=320></td>
+            <td><img src="img/districtb13_selection.jpg" width=220 height=320></td>
         </tr>
         <tr>
             <td><a href="https://www.imdb.com/title/tt0381061">Casino Royale</a></td>
@@ -57,7 +57,7 @@
             <td>
                 <p>Sébastien Foucan</p>
             </td>
-            <td><img src="img/casinoroyale_orig.jpg" width=220 height=320></td>
+            <td><img src="img/casinoroyale_spatial_color.jpg" width=220 height=320></td>
         </tr>
     </table>
     <p style="font-size:12px;">(taken from <a href="https://www.imdb.com">imdb.com</a>)</p>
